# Pkmn-dmg-calc-bot

./: .env.example  .gitignore  LICENSE  README.md  bot.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
bot/commands/: __init__.py  calc_damage.py  commands.py  debug.py  help.py  start.py
bot/error/: __init__.py  error_handler.py
lib/: requester.ts
